--- a/views/products/index.ejs
+++ b/views/products/index.ejs
@@ -2,20 +2,20 @@
 <%layout('layouts/bollerplate')%>
 <%- include('../partials/navbar') %>
 <%- include('../partials/flash') %>
-    <div class="row">
+    <div class="row index-main">
    <% for(let i of products){ %>
-    <div class="col-lg-3 mt-3">
-    <div class="card shadow mx-auto m-3" style="width: 18rem; height:25rem">
+    <div class="col-lg-3 mt-3 ">
+    <div class="card shadow mx-auto m-3 card-main" style="width: 18rem; height:25rem">
         <img src="<%=i.img %>" class="card-img-top" alt="..." style="overflow: hidden;">
-        <div class="card-body">
+        <div class="card-body card-text-background">
             <h5 class="card-title"><%=i.name%></h5>
-            <h5 class="card-title"><%=i.price%></h5>
+            <h5 class="card-title "><i class="fa-solid fa-indian-rupee-sign"></i> <%=i.price%></h5>
             <p class="card-text"><%= i.desc %></p>
             <a href="/products/<%=i._id%>" class="btn btn-primary info">View Product</a>
             <% if(currentUser && currentUser.role==='seller' ){ %>
             <form class="d-inline-block" action="/products/<%=i._id%>?_method=DELETE" method="post">
            
-                <button class="btn btn-sm btn-danger" type="submit">Delete</button>
+                <button class="btn  btn-danger sz-2" type="submit">Delete</button>
           
             </form>
             <% } %>
@@ -24,3 +24,5 @@
     </div>
    <% } %>
 </div>
+<%- include('../partials/footer') %>
+
