--- a/views/products/new.ejs
+++ b/views/products/new.ejs
@@ -25,14 +25,13 @@
                 </div>
                 <div class="mb-3">
                     <label for="name">Price:</label>
-                    <input type="text" class="form-control" name="price" id="name" placeholder="Enter Price">
-                    
+                    <input type="text" class="form-control" name="price" id="name" placeholder="Enter Price">  
                 </div>
-                <div class="mb-3">
-                    <label for="name">Name:</label>
+                <div class="d-flex justify-content-space-between align-items-center ">
+                    <label for="name">Description  :</label>
                     <textarea name="desc" id="desc"  rows="3" placeholder="description"></textarea>
                 </div>
-                <button class="btn  btn-success" type="submit">Add Product</button>
+                <button class=" mt-2 btn  btn-success" type="submit">Add Product</button>
             </form>
           </div>
            
